; ModuleID = '/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_readdir.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_readdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dirent = type { i32 }
%struct.TYPE_5__ = type { i32 }
%struct._reent = type { i32 }

@EBADF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.dirent* @readdir(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.dirent*, align 8
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct._reent*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.dirent*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32* @get_vfs_for_index(i32 %10)
  store i32* %11, i32** %4, align 8
  %12 = call %struct._reent* (...) @__getreent()
  store %struct._reent* %12, %struct._reent** %5, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %1
  %16 = load i32, i32* @EBADF, align 4
  store i32 %16, i32* %6, align 4
  store %struct.dirent* null, %struct.dirent** %2, align 8
  br label %24

17:                                               ; preds = %1
  %18 = load %struct.dirent*, %struct.dirent** %7, align 8
  %19 = load %struct._reent*, %struct._reent** %5, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %22 = call i32 @CHECK_AND_CALLP(%struct.dirent* %18, %struct._reent* %19, i32* %20, %struct.dirent* (%struct.TYPE_5__*)* @readdir, %struct.TYPE_5__* %21)
  %23 = load %struct.dirent*, %struct.dirent** %7, align 8
  store %struct.dirent* %23, %struct.dirent** %2, align 8
  br label %24

24:                                               ; preds = %17, %15
  %25 = load %struct.dirent*, %struct.dirent** %2, align 8
  ret %struct.dirent* %25
}

declare dso_local i32* @get_vfs_for_index(i32) #1

declare dso_local %struct._reent* @__getreent(...) #1

declare dso_local i32 @CHECK_AND_CALLP(%struct.dirent*, %struct._reent*, i32*, %struct.dirent* (%struct.TYPE_5__*)*, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
